--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ boilerplate/
 # local developer test files
 test.py
 spike*
+README_IFX.rst
 
 # pycharm
 # All the settings files in the .idea directory should be put under version control except the workspace.xml, which stores your local preferences. The workspace.xml file should be marked as ignored by VCS. 
