--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 - '3.5'
 install: pip install -r nidhogg/requirements-test.txt
 script: py.test
+before_deploy: cd nidhogg
 deploy:
   provider: pypi
   user: rolze
