--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = 3.4
+current_version = 3.4.1
 commit = True
 tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
 serialize = 
-	{major}.{minor}
+	{major}.{minor}.{patch}
 message = 
 	REL: version bumped from {current_version} to {new_version}
 
