--- a/nidhogg/MANIFEST.in
+++ b/nidhogg/MANIFEST.in
@@ -1,2 +1,6 @@
 include LICENSE.txt
 include README.rst
+exclude .coveragerc
+exclude requirements-*.txt
+recursive-exclude tests *
+recursive-exclude docs *
