dir structure changed

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,7 +10,4 @@ message =
 
 [bumpversion:file:doc/source/conf.py]
 
-[bumpversion:file:nidhogg/setup.py]
-
-[bumpversion:file:sonar-project.properties]
-
+[bumpversion:file:setup.py]
