--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
 - '2.7'
 - '3.4'
 - '3.5'
-install: pip install -r nidhogg/requirements-test.txt
+install: pip install -r requirements-test.txt
 script: py.test
 deploy:
   provider: pypi
